@@ -1,5 +1,5 @@
 ### 学习笔记
-####第1课作业实践
+#### 第1课作业实践
 1. 自己写一个简单的 Hello.java，里面需要涉及基本类型，四则运行，if 和 for，然后
   自己分析一下对应的字节码，有问题群里讨论。
 
@@ -20,3 +20,11 @@
     [作业4-系统JVM分析-查看链接](./code/homework/%E4%BD%9C%E4%B8%9A4-%E7%B3%BB%E7%BB%9FJVM%E5%88%86%E6%9E%90.md)
   //TODO 去公司分析现有的check项目
 
+#### 第2课作业实践
+1. 本机使用 G1 GC 启动一个程序，仿照课上案例分析一下 JVM 情况 
+  可以使用gateway-server-0.0.1-SNAPSHOT.jar 注意关闭自适应参数：-XX:-UseAdaptiveSizePolicy 
+  > java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseSerialGC -jar target/gateway-server- 0.0.1-SNAPSHOT.jar 
+  > java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseParallelGC -jar target/gateway-server- 0.0.1-SNAPSHOT.jar 
+  > java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseConcMarkSweepGC -jar target/gateway-server-0.0.1-SNAPSHOT.jar 
+  > java -Xmx1g -Xms1g -XX:-UseAdaptiveSizePolicy -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -jar target/gateway-server-0.0.1-SNAPSHOT.jar 
+  使用jmap，jstat，jstack，以及可视化工具，查看jvm情况。 mac上可以用wrk，windows上可以按照superbenchmark压测 http://localhost:8088/api/hello 查看jvm。
